--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,34 +8,11 @@ import Card from "../components/Card.astro";
     <a href="/">Home</a>
     <a href="/about/">About</a>
 
-    <h1>Welcome to <span class="text-gradient">Songwriter's Toolbox</span></h1>
+    <h1><span class="text-gradient">Inspiration</span></h1>
     <p class="instructions">
-      To get started, open the directory <code>src/pages</code> in your project.<br
-      />
-      <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+      To help music creators kickstart a project, broaden their knowledge on
+      various styles of music, and catalyse inspiration.
     </p>
-    <ul role="list" class="link-card-grid">
-      <Card
-        href="https://docs.astro.build/"
-        title="Documentation"
-        body="Learn how Astro works and explore the official API docs."
-      />
-      <Card
-        href="https://astro.build/integrations/"
-        title="Integrations"
-        body="Supercharge your project with new frameworks and libraries."
-      />
-      <Card
-        href="https://astro.build/themes/"
-        title="Themes"
-        body="Explore a galaxy of community-built starter themes."
-      />
-      <Card
-        href="https://astro.build/chat/"
-        title="Community"
-        body="Come say hi to our amazing Discord community. ❤️"
-      />
-    </ul>
   </main>
 </Layout>
 
