--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,15 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
+import Greeting from "../components/Greeting.svelte";
+
+const messages = ["Hello", "Hi", "Hey", "Welcome", "Greetings", "Salutations"];
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Songwriter's toolbox.">
   <main>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-
     <h1>Welcome to <span class="text-gradient">Songwriter's Toolbox</span></h1>
-    <p class="instructions">
-      To get started, open the directory <code>src/pages</code> in your project.<br
-      />
-      <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-    </p>
+    <Greeting client:load {messages} />
     <ul role="list" class="link-card-grid">
       <Card
         href="https://docs.astro.build/"
