--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import Greeting from "../components/Greeting.svelte";
+import GenreSelect from "../components/GenreSelect.svelte";
 
 const messages = ["Hello", "Hi", "Hey", "Welcome", "Greetings", "Salutations"];
 ---
@@ -9,29 +10,7 @@ const messages = ["Hello", "Hi", "Hey", "Welcome", "Greetings", "Salutations"];
 <Layout title="Songwriter's toolbox.">
   <main>
     <h1>Welcome to <span class="text-gradient">Songwriter's Toolbox</span></h1>
-    <Greeting client:load {messages} />
-    <ul role="list" class="link-card-grid">
-      <Card
-        href="https://docs.astro.build/"
-        title="Documentation"
-        body="Learn how Astro works and explore the official API docs."
-      />
-      <Card
-        href="https://astro.build/integrations/"
-        title="Integrations"
-        body="Supercharge your project with new frameworks and libraries."
-      />
-      <Card
-        href="https://astro.build/themes/"
-        title="Themes"
-        body="Explore a galaxy of community-built starter themes."
-      />
-      <Card
-        href="https://astro.build/chat/"
-        title="Community"
-        body="Come say hi to our amazing Discord community. ❤️"
-      />
-    </ul>
+    <GenreSelect client:load />
   </main>
 </Layout>
 
