Add utils folder with multiple get functions and generate MIDI functionality

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ const allGenres = await Astro.glob("../pages/genres/*.md");
 const pageTitle = "Inspire";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Songwriter's toolbox">
   <main>
     <h1><span class="text-gradient">{pageTitle}</span></h1>
     <p class="instructions">
